src/other/mico-2.3.12/test/idl/error/case14.idl

/*
 * Parse error
 */

struct S {
  long x;
  char !!!a;
};

